--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -59,30 +59,16 @@
           });
         }
         document.getElementById("downloadPdf").addEventListener("click", function() {
+            console.log(1)
             html2canvas(document.getElementById("pdf_vntop"), 
             {
 				allowTaint: true,
 				useCORS: true
 			}).then(function (canvas) {
-                var dataURL = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-                var tempLink = document.createElement('a'), e; 
-                    tempLink.download = 'untitled.png';
-                    if (/(iPad|iPhone|iPod)/g.test(navigator.userAgent)) { //iOS = Iphone, Ipad, etc.
-                        alert("Instructions...");
-                        tempLink.target = "_blank";
-                        tempLink.href = dataURL;
-                    } else {
-                        tempLink.href = dataURL.replace(/^data[:]image\/png[;]/i, "data:application/download;");//force download
-                    }
-
-                if (document.createEvent)                        
-                {
-                    e = document.createEvent("MouseEvents");
-                    e.initMouseEvent("click", true, true, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
-                    tempLink.dispatchEvent(e);
-                } else if (tempLink.fireEvent) {
-                    tempLink.fireEvent("onclick");
-                }
+                var a = document.createElement('a');
+                a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                a.download = 'download.jpg';
+                a.click();
             });
         })
       </script>
