--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -47,9 +47,9 @@
                 <img src="images/temp.png" alt="">
             </div>
         </div>
-        <div id="box-img-out" style="">
+        <!-- <div id="box-img-out">
             <div id="img-out"></div>
-        </div>
+        </div> -->
     </div>
     <style>
         body {
