--- a/client/lich-su-vi.html
+++ b/client/lich-su-vi.html
@@ -134,21 +134,30 @@
                                                     <span>Lãi suất cố định</span>
                                                     <span class="exchange up">+10.000.000<sup>đ</sup></span>
                                                 </div>
-                                                <div class="right">11/11/2021</div>
+                                                <div class="right right_custom">
+                                                    <span>11/11/2021</span>
+                                                    <span class="success">Hoàn thành</span>
+                                                </div>
                                             </div>
                                             <div class="item">
                                                 <div class="left">
                                                     <span>VN TOP All</span>
                                                     <span class="exchange up">+10.000.000<sup>đ</sup></span>
                                                 </div>
-                                                <div class="right">11/11/2021</div>
+                                                <div class="right right_custom">
+                                                    <span>11/11/2021</span>
+                                                    <span class="success">Hoàn thành</span>
+                                                </div>
                                             </div>
                                             <div class="item">
                                                 <div class="left">
                                                     <span>VN TOP10</span>
                                                     <span class="exchange up">+10.000.000<sup>đ</sup></span>
                                                 </div>
-                                                <div class="right">11/11/2021</div>
+                                                <div class="right right_custom">
+                                                    <span>11/11/2021</span>
+                                                    <span class="success">Hoàn thành</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -163,21 +172,30 @@
                                                     <span>Lãi suất cố định</span>
                                                     <span class="exchange down">+10.000.000<sup>đ</sup></span>
                                                 </div>
-                                                <div class="right">11/11/2021</div>
+                                                <div class="right right_custom">
+                                                    <span>11/11/2021</span>
+                                                    <span class="success">Hoàn thành</span>
+                                                </div>
                                             </div>
                                             <div class="item">
                                                 <div class="left">
                                                     <span>VN TOP All</span>
                                                     <span class="exchange down">+10.000.000<sup>đ</sup></span>
                                                 </div>
-                                                <div class="right">11/11/2021</div>
+                                                <div class="right right_custom">
+                                                    <span>11/11/2021</span>
+                                                    <span class="success">Hoàn thành</span>
+                                                </div>
                                             </div>
                                             <div class="item">
                                                 <div class="left">
                                                     <span>VN TOP10</span>
                                                     <span class="exchange down">+10.000.000<sup>đ</sup></span>
                                                 </div>
-                                                <div class="right">11/11/2021</div>
+                                                <div class="right right_custom">
+                                                    <span>11/11/2021</span>
+                                                    <span class="success">Hoàn thành</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
