--- a/client/lich-su-vi.html
+++ b/client/lich-su-vi.html
@@ -131,31 +131,31 @@
                                         <div class="box__body">
                                             <div class="item">
                                                 <div class="left">
-                                                    <span>Lãi suất cố định</span>
                                                     <span class="exchange up">+10.000.000<sup>đ</sup></span>
+                                                    <span>ND: TKSIC1008</span>
                                                 </div>
                                                 <div class="right right_custom">
-                                                    <span>11/11/2021</span>
+                                                    <span>11/11/2021 10:08</span>
                                                     <span class="success">Hoàn thành</span>
                                                 </div>
                                             </div>
                                             <div class="item">
                                                 <div class="left">
-                                                    <span>VN TOP All</span>
                                                     <span class="exchange up">+10.000.000<sup>đ</sup></span>
+                                                    <span>ND: TKSIC1008</span>
                                                 </div>
                                                 <div class="right right_custom">
-                                                    <span>11/11/2021</span>
+                                                    <span>11/11/2021 10:08</span>
                                                     <span class="success">Hoàn thành</span>
                                                 </div>
                                             </div>
                                             <div class="item">
                                                 <div class="left">
-                                                    <span>VN TOP10</span>
                                                     <span class="exchange up">+10.000.000<sup>đ</sup></span>
+                                                    <span>ND: TKSIC1008</span>
                                                 </div>
                                                 <div class="right right_custom">
-                                                    <span>11/11/2021</span>
+                                                    <span>11/11/2021 10:08</span>
                                                     <span class="success">Hoàn thành</span>
                                                 </div>
                                             </div>
@@ -169,31 +169,31 @@
                                         <div class="box__body">
                                             <div class="item">
                                                 <div class="left">
-                                                    <span>Lãi suất cố định</span>
                                                     <span class="exchange down">+10.000.000<sup>đ</sup></span>
+                                                    <span>ND: TKSIC1008</span>
                                                 </div>
                                                 <div class="right right_custom">
-                                                    <span>11/11/2021</span>
+                                                    <span>11/11/2021 10:08</span>
                                                     <span class="success">Hoàn thành</span>
                                                 </div>
                                             </div>
                                             <div class="item">
                                                 <div class="left">
-                                                    <span>VN TOP All</span>
                                                     <span class="exchange down">+10.000.000<sup>đ</sup></span>
+                                                    <span>ND: TKSIC1008</span>
                                                 </div>
                                                 <div class="right right_custom">
-                                                    <span>11/11/2021</span>
+                                                    <span>11/11/2021 10:08</span>
                                                     <span class="success">Hoàn thành</span>
                                                 </div>
                                             </div>
                                             <div class="item">
                                                 <div class="left">
-                                                    <span>VN TOP10</span>
                                                     <span class="exchange down">+10.000.000<sup>đ</sup></span>
+                                                    <span>ND: TKSIC1008</span>
                                                 </div>
                                                 <div class="right right_custom">
-                                                    <span>11/11/2021</span>
+                                                    <span>11/11/2021 10:08</span>
                                                     <span class="success">Hoàn thành</span>
                                                 </div>
                                             </div>
