--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -18,7 +18,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="libs/owlcarousel/assets/owl.carousel.min.css">
     <link href="libs/ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="libs/aos/aos.css" rel="stylesheet">
@@ -28,10 +27,10 @@
     <header id="header-top">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-2 col-lg-3">
                     <a href="#"><img src="imgs/logo-new.png" alt=""></a>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-10 col-lg-9">
                     <p>Dẫn lối đầu tư thông minh - Your guide to smart investments</p>
                 </div>
             </div>
@@ -95,13 +94,13 @@
                     </div>
                 </div>
                <div class="row partner-list">
-                   <div class="col-lg-4">
+                   <div class="col-6 col-lg-4">
                        <div class="partner-item">
                            <img src="./imgs/logo-triminh.png" alt="">
                            <p>Công ty Luật Trí Minh: Bảo trợ pháp lý cho khách hàng và TKSIC</p>
                        </div>
                    </div>
-                   <div class="col-lg-4">
+                   <div class="col-6 col-lg-4">
                     <div class="partner-item">
                         <img src="./imgs/logo-sunshine-group.png" alt="">
                         <p>Tập đoàn kinh tế đa ngành 
@@ -109,37 +108,37 @@
                             giải pháp bảo chứng tiền gửi </p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="partner-item">
-                        <img src="./imgs/logo-sunshine-group.png" alt="">
+                        <img src="./imgs/logo-hsc.png" alt="">
                         <p>CTCP Chứng khoán TP.HCM (HSC): Đối tác thực hiện đâu tư</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="partner-item">
                         <img src="./imgs/logo-vnpay.png" alt="">
                         <p>VNPay: Hỗ trợ giải pháp thanh toán toàn diện</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="partner-item">
-                        <img src="./imgs/logo-triminh.png" alt="">
+                        <img src="./imgs/fina-shark.png" alt="">
                         <p>Công cụ phân tích dòng tiền</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="partner-item">
                         <img src="./imgs/logo-techcombank.png" alt="">
                         <p>Ngân hàng Techcombank: Bảo lãnh thanh toán</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="partner-item">
-                        <img src="./imgs/logo-triminh.png" alt="">
+                        <img src="./imgs/ncsc.png" alt="">
                         <p>Trung tâm Giám sát an toàn không gian mạng quốc gia (NCSC): Đảm bảo bảo mật hệ thống dữ liệu và thông tin khách hàng</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="partner-item">
                         <img src="./imgs/logo-ito.png" alt="">
                         <p>Đơn vị kiểm toán hàng đầu Việt Nam ITOGroup: Cung cấp báo cáo kiểm toán độc lập hằng quý</p>
@@ -275,7 +274,7 @@
                             <td>Ưa mạo hiểm, tăng trưởng đột phá</td>
                         </tr>
                     </table>
-                    <!-- <div class="table-mobile">
+                    <div class="table-mobile">
                         <div class="tr">
                             <div class="th">Đầu tư lợi nhuận cố địng</div>
                         </div>
@@ -362,7 +361,7 @@
                             <div>Linh hoạt</div>
                             <div>Ưa mạo hiểm, tăng trưởng đột phá</div>
                         </div>
-                    </div> -->
+                    </div>
                     <p class="product-table-note">*Lợi nhuận theo dữ liệu kiểm chứng từ 2015. Thực tế có thể thay đổi theo điều kiện thị trường.</p>
                     <div class="link-btn">
                         <a href="#">Đầu tư ngay</a>
